[package]
name = "semtexzv-ipfsapi"
version = "0.4.1-alpha.1"
description = "Crate for interfacing with the IPFS api"
license = "MIT"
keywords = ["ipfs", "api", "p2p"]
categories = ["api-bindings"]
repository = "https://github.com/semtexzv/rust-ipfs-api"
documentation = "https://docs.rs/ipfsapi"
authors = ["Michal Hornicky <semtexzv@gmail.com>", "Gökberk Yaltıraklı <webdosusb@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0.32"
base64 = "0.12.3"
bytes = "0.5.6"
url = "2.1.1"
